--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -14147,7 +14147,7 @@ textarea {
 
 .hero .heading {
     color: #fff;
-    font-size: clamp(1.5rem, 2.5vw, 2.5rem);
+    font-size: 4em;
     margin-bottom: 30px;
     font-weight: 600;
 }
@@ -14792,7 +14792,8 @@ textarea {
 }
 
 .site-footer h2 {
-    color: #000 !important;
+    color: white !important;
+    font-size: 21px;
 }
 
 .u-l {
@@ -15027,14 +15028,13 @@ nav[aria-label="breadcrumb"] li:before {
     background: #000000;
     font-size: 14px;
     color: #fff;
-    padding: 70px 0;
+    padding: 30px 0 !important;
 }
 
 .site-footer a {
     color: #fff;
     position: relative;
     display: inline-block;
-    text-decoration: underline;
 }
 
 .site-footer a:hover {
